# insectmotiondetect

eclipse/: cli.py  gui.py  image_processing.py  pyproject.toml
